<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back"
        android:orientation="vertical">

        <EditText
            android:id="@+id/hystory_view"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:editable="false"
            android:layout_marginStart="20sp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:inputType="none"
            android:importantForAutofill="no" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <EditText
            android:id="@+id/res_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:editable="false"
            android:gravity="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:importantForAutofill="no"
            android:inputType= "none" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10sp"
            android:gravity="bottom">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/b_AC"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/AC"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_del"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/del"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/percent"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_wdtfs"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/full"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/b_7"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_7"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_8"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_8"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_9"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_9"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_mult"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/multy"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/b_4"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_4"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_5"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_5"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_6"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_6"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_minus"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/b_1"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_1"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_2"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_3"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_3"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_plus"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/b_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/dot"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_0"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_div"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/div"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/b_equals"
                    android:layout_width="wrap_content"
                    android:layout_height="70sp"
                    android:insetLeft="5sp"
                    android:insetRight="5sp"
                    android:text="@string/eq"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>
        </TableLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>